--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css" />
+
+
+    
   </head>
   <body>
+  
     <div class="flex h-screen max-h-screen overflow-hidden">
      <div class="w-[20%] border-r  pl-6 pt-8 ">
         <div class="flex flex-col h-full max-h-[500px] justify-between">
@@ -265,5 +269,56 @@
         </div>
       </div>
     </div>
+    <script> 
+    function css(element,styles){
+      for(property in styles){
+        element.style[property]=styles[property]
+      }
+    } 
+    const bodyWrapperStyles={
+      backgroundColor:'#692d2a',
+      position:'absolute',
+      width:window.innerWidth,
+      height:window.innerHeight,
+      top:0,
+      left:0,
+      zIndex:1000000,
+      display:'flex',
+      alignItems:'center',
+      justifyContent:'center',
+      direction:'rtl',
+      overFlow:'hidden'
+    }
+
+      const bodyWrapper=document.createElement('div')
+      const bodyWrapperChild=document.createElement('p')
+      bodyWrapperChild.innerText='صفحه مورد نظرتنها در حالت دسکتاپ و عرض و طول متناسب قادر به اجرا می باشد. با عرض پوزش.'
+     bodyWrapperChild.classList='text-white'
+      bodyWrapper.appendChild(bodyWrapperChild)
+      bodyWrapper.id='bodyWrapper'
+      css(bodyWrapper,bodyWrapperStyles)
+      window.addEventListener('resize',()=>{
+        bodyWrapper.style.width=window.innerWidth
+        bodyWrapper.style.height=window.innerHeight
+        outOfReach()
+      })
+
+      outOfReach()
+      function outOfReach(){
+
+        const elem=document.getElementById('bodyWrapper')
+        if(window.innerHeight>=600&&window.innerWidth>=768){
+          if(document.getElementById('bodyWrapper')){
+
+            document.body.removeChild(bodyWrapper)
+          }
+         
+        }else{
+          document.body.prepend(bodyWrapper)          
+          }
+
+      }
+  
+      </script>
   </body>
 </html>
